Allow reflective access to java.base modules from tests